<resources>

    <string name="app_name">Auth</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_pass_face_admin">PassFaceAdminActivity</string>


    <!--> Pattern_lock <-->
    <string name="lib_name">PatternLockView</string>
    <string name="message_pattern_dot_added">Dot added to pattern</string>
    <string name="message_pattern_started">Pattern drawing started</string>
    <string name="message_pattern_detected">Pattern drawing completed</string>
    <string name="message_pattern_cleared">Pattern cleared</string>
    <string name="message_pattern_max_size">Pattern max size detected</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="type_of_matching">Type of matching</string>
    <string name="nbSteps">Number of steps</string>
    <string name="semantic">Semantic</string>
    <string name="exact">Exact</string>
    <string name="yes">Yes</string>
    <string name="order_of_photos_in_password">Password order</string>
    <string name="password_length">Password length per steps</string>
    <string name="type_of_pictures">Type of pictures</string>
    <string name="number_of_pictures_shown">Number of pictures shown</string>
    <string name="no">No</string>
    <string name="nbPhotosPreference">NbPhotos</string>
    <string name="typePhotosPreference">TypePhotos</string>
    <string name="passwordLengthPreference">PasswordLength</string>
    <string name="isInOrderPreference">IsInOrder</string>
    <string name="numberStepsPreference">NumberOfSteps</string>
    <string name="matchingTypePreference">MatchingType</string>
    <string name="passFacePreferences">PassFacePreferences</string>
    <string name="passwordPreference">Password</string>
    <string name="passFace">Passface</string>
    <string name="Password_changed">Password changed</string>
    <string name="good_pwd">Good Pwd</string>
    <string name="wrong_pwd">Wrong Pwd</string>
    <string name="doShufflePreference">DoShuffle</string>
    <string name="twicePhotoPreference">TwicePhoto</string>
    <string name="Password_not_changed">The Password isn\'t following the rules</string>


    <string-array name="nbPhotos">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="typePhotos">
        <item>Animals</item>
        <item>Misc</item>
        <item>Geometry Forms</item>
    </string-array>

    <string-array name="iterator">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="pinLength_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>


    <!-- SchemePattern -->

    <string-array name="nbColumnsRows">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="lengthSchemePattern">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>


</resources>
