<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aaa.pfe.auth.view.passface.PassFaceAdminActivity">


    <!-- Inheritance of the layout with the include of it, you can add other components under -->

    <include
        layout="@layout/activity_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/textViewNbPictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="17dp"
        android:text="@string/number_of_pictures_shown" />

    <TextView
        android:id="@+id/textViewNbRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewNbPictures"
        android:layout_below="@+id/textViewNbPictures"
        android:text="Between 1 and 12"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/editTextNbPhotos"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewPasswordLength"
        android:layout_alignStart="@+id/editTextPasswordLength"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2" />

    <TextView
        android:id="@+id/textViewPasswordLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewNbRed"
        android:layout_below="@+id/textViewNbRed"
        android:layout_marginTop="20dp"
        android:text="@string/password_length" />

    <EditText
        android:id="@+id/editTextPasswordLength"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewPasswordLength"
        android:layout_alignBottom="@+id/textViewPasswordLength"
        android:layout_alignEnd="@+id/matchingRadioGroup"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2" />

    <EditText
        android:id="@+id/editTextNbSteps"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewNbSteps"
        android:layout_alignBottom="@+id/textViewNbSteps"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2" />

    <TextView
        android:id="@+id/textViewNbSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewTypePictures"
        android:layout_alignStart="@+id/textViewNbStepsRed"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="20dp"
        android:text="@string/nbSteps" />

    <TextView
        android:id="@+id/textViewNbStepsRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewPasswordLength"
        android:layout_below="@+id/editTextPasswordLength"
        android:layout_marginTop="38dp"
        android:text="Between 1 and 5"
        android:textColor="@color/red"
        android:textSize="10sp" />


    <EditText
        android:id="@+id/editTextNbAttempts"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewNbAttempts"
        android:layout_alignEnd="@id/editTextNbPhotos"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewNbAttempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewTypePictures"
        android:layout_below="@id/textViewNbSteps"
        android:layout_marginTop="20dp"
        android:text="Number of attempts" />

    <TextView
        android:id="@+id/textViewTypePictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewNbStepsRed"
        android:layout_below="@+id/textViewNbStepsRed"
        android:layout_marginTop="59dp"
        android:text="@string/type_of_pictures" />

    <Spinner
        android:id="@+id/spinnerTypePhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textViewTypePictures"
        android:layout_alignEnd="@+id/editTextNbSteps"
        android:layout_below="@id/editTextNbAttempts"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/textViewTypeMatching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewNbSteps"
        android:layout_below="@+id/textViewTypePictures"
        android:layout_marginTop="20dp"
        android:text="@string/type_of_matching" />

    <RadioGroup
        android:id="@+id/matchingRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/editTextNbSteps"
        android:layout_alignTop="@+id/textViewTypeMatching"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/exactRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/exact" />

        <RadioButton
            android:id="@+id/semanticRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/matchingRadioGroup"
            android:layout_alignTop="@+id/matchingRadioGroup"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/semantic" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewShuffleImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewTypeMatching"
        android:layout_below="@+id/matchingRadioGroup"
        android:layout_marginTop="20dp"
        android:text="Shuffle Images" />

    <RadioGroup
        android:id="@+id/shuffleRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/matchingRadioGroup"
        android:layout_alignTop="@+id/textViewShuffleImages"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/yesShuffleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/noShuffleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/no" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewImageTwice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewShuffleImages"
        android:layout_below="@+id/shuffleRadioGroup"
        android:layout_marginTop="20dp"
        android:text="Use an image twice " />

    <RadioGroup
        android:id="@+id/twiceRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/matchingRadioGroup"
        android:layout_alignTop="@+id/textViewImageTwice"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/yesTwiceRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/twiceRadioGroup"
            android:layout_alignTop="@+id/twiceRadioGroup"
            android:layout_weight="1"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/noTwiceRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/no" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewImageTwice"
        android:layout_below="@+id/twiceRadioGroup"
        android:layout_marginTop="20dp"
        android:text="Capture mode" />

    <RadioGroup
        android:id="@+id/captureModeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/matchingRadioGroup"
        android:layout_alignTop="@+id/textViewCapture"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/yesCaptureRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/noCaptureRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/no" />

    </RadioGroup>


</RelativeLayout>
